@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-22
+2013-03-26 Andy Salnikov
+- small changes to cspad scheme to make it work with HDF5
+
 Tag: V00-04-21
 2013-03-25 Andy Salnikov
 - small changes to Orca scheme to make it work better with HDF5
